otel/otel-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otel-metrics
  namespace: wallet-monitoring
spec:
  selector:
    app.kubernetes.io/name: opentelemetry-collector
  ports:
    - port: 8889
      targetPort: 8889
      protocol: TCP
      name: metrics
    - port: 8890
      targetPort: 8890
      protocol: TCP
      name: metrics2
